8. Practice Project/DEPLOYMENT k8s/network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-service
spec:
  selector:
    app: laravel-app
  ports:
    - port: 80
      targetPort: 9000
