8. Practice Project/DEPLOYMENT k8s/network/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-traffic
spec:
  podSelector:
    matchLabels:
      app: laravel-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mysql
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 6379
